debugging:   frontend/script.js
